Se completo la funcion de login/logout. se mejoro los stilos

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-body {
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+:root{
+  --color1: #1A1A1B;
+  --color2: #333F44;
+  --color3: #37AA9C;
+  --color4: #94F3E4;
+  --color5: #ffffff;
+};
+
