--- a/src/style/components/Header.css
+++ b/src/style/components/Header.css
@@ -1,6 +1,6 @@
 .Header{
     width: 100%;
-    height: 10vh;
+    height: 12vh;
     background-color: var(--color1);
     margin: 0px;
     padding: 0px;
@@ -13,7 +13,45 @@
     padding: 0px 10px 0px 10px;
 }
 
+.Header-logo img{
+    height:50px;
+    padding: 7px;
+    display: flex;
+    align-items: center;
+}
+
+
+.Header-secondLeg{
+    display: flex;
+    align-items: center;
+}
+
+.Header-profile{
+    margin-right: 20px;
+}
+
+.Header-button{
+    margin-right: 20px;
+}
+
+.Header-input input{
+    padding: 5px;
+    background-color: var(--color5);
+    border-radius: 5px;
+    border: none;
+    outline: none;
+}
+
 .Header a{
     text-decoration: none;
     color: var(--color3);
+}
+
+@media(max-width: 1000px){
+	.Header-profile{
+     width: 0px;
+    }
+    .Header-button{
+        width: 0px;
+    }
 }
