--- a/src/style/components/SideBar.css
+++ b/src/style/components/SideBar.css
@@ -6,4 +6,7 @@
     background-color: #ffffff10;
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
+    position: sticky;
+    top: 12vh;
+    color: var(--color5);
 }
