--- a/src/style/components/Welcome.css
+++ b/src/style/components/Welcome.css
@@ -1,7 +1,9 @@
 .Welcome {
     display: flex;
     justify-content: center;
-    color: var(--color5)
+    color: var(--color5);
+    width: 100%;
+    height: 100%;
 }
 
 .Welcome-wrapped {
