--- a/src/style/containers/Landing.css
+++ b/src/style/containers/Landing.css
@@ -1,6 +1,8 @@
 .Landing{
     width: 100%;
-    height: 88vh;
+    min-height: 88vh;
+    max-height: auto;
+    margin-top: 12vh;
     background-image: url("https://www.xtrafondos.com/wallpapers/temporada-2-de-mandaloriano-6319.jpg");
     background-size: cover;
 }
