[add] Se agrego el review page

--- a/src/style/components/Cartelera.css
+++ b/src/style/components/Cartelera.css
@@ -1,6 +1,15 @@
 .Cartelera{
     margin: 0;
-    padding: 0;
-    width: 75%;
+    padding: 15px;
+    width: 80%;
     height: 100%;
+    color: var(--color5);
+}
+
+.Cartelera-wrapped{
+    display: grid;
+    grid-template-columns: repeat(auto-fill , 230px);
+    gap: 40px;
+    padding: 40px;
+    justify-content: center;
 }
